# futures-dagtask

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: graph.rs  lib.rs
tests/: bad.rs  nohash.rs  task.rs
